Add breadcrumbs to all spes

--- a/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
+++ b/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
@@ -1,5 +1,5 @@
 <div  *ngIf="entity; else spinner" class="entity-view">
-  <div class="entity-view__title">{{'AFFILIATE_TITLE' | translate}}</div>
+  <entity-view-breadcrumbs [items]="breadcrumbs"></entity-view-breadcrumbs>
 
   <div (click)="navigation.back()" class="entity-view__change-mode"><md-icon>reply</md-icon></div>
 
@@ -67,5 +67,5 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="3" [cardsExpression]="'100%'" [title]="'AFFILIATE_TITLE' | translate"></spe-loader>
+  <spe-loader [numberOfTabs]="3" [cardsExpression]="'100%'" [title]="'AFFILIATE_INDEX_TITLE' | translate"></spe-loader>
 </ng-template>
