--- a/src/app/shared/components/spe-loader/spe-loader.component.html
+++ b/src/app/shared/components/spe-loader/spe-loader.component.html
@@ -3,7 +3,7 @@
   <div class="entity-view__title">
     <div class="dummy-title">{{title}}
       <ng-container *ngIf="showBreadcrumb">
-        <md-icon>keyboard_arrow_right</md-icon>
+        <md-icon class="dummy-title-arrow">keyboard_arrow_right</md-icon>
         <span class="dummy-title-id"></span>
       </ng-container>
     </div>
