--- a/src/assets/scss/_entity-index.scss
+++ b/src/assets/scss/_entity-index.scss
@@ -6,7 +6,7 @@ $title-color: #8D8888;
   &__title {
     display: flex;
     align-items: center;
-    padding: 21px 55px 21px 80px;
+    padding: 20px 55px;
     font-size: 20px;
     font-weight: 500;
     color: $title-color;
