--- a/src/app/pages/bills-page/bill-view/bill-view.component.html
+++ b/src/app/pages/bills-page/bill-view/bill-view.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="entity; else spinner" class="entity-view">
-  <div class="entity-view__title">{{'BILL_TITLE' | translate}}</div>
+  <entity-view-breadcrumbs [items]="breadcrumbs"></entity-view-breadcrumbs>
 
   <div (click)="navigation.back()" class="entity-view__change-mode"><md-icon>reply</md-icon></div>
 
@@ -23,5 +23,5 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="1" [cardsExpression]="'300px;500px'" [title]="'BILL_TITLE' | translate"></spe-loader>
+  <spe-loader [numberOfTabs]="1" [cardsExpression]="'300px;500px'" [title]="'BILL_INDEX_TITLE' | translate"></spe-loader>
 </ng-template>
