--- a/src/app/pages/campaigns-page/campaign-view/campaign-view.component.html
+++ b/src/app/pages/campaigns-page/campaign-view/campaign-view.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="entity; else spinner" class="entity-view">
-  <div class="entity-view__title"> {{'CAMPAIGN_TITLE' | translate}} </div>
+  <entity-view-breadcrumbs [items]="breadcrumbs"></entity-view-breadcrumbs>
 
   <div (click)="navigation.back()" class="entity-view__change-mode"><md-icon>reply</md-icon></div>
 
@@ -99,6 +99,6 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="4" [cardsExpression]="'300px;450px'" [title]="'CAMPAIGN_TITLE' | translate"></spe-loader>
+  <spe-loader [numberOfTabs]="4" [cardsExpression]="'300px;450px'" [title]="'CAMPAIGN_INDEX_TITLE' | translate"></spe-loader>
 </ng-template>
 
