--- a/src/app/pages/merchant-provider-groups-page/merchant-provider-group-view/merchant-provider-group-view.component.html
+++ b/src/app/pages/merchant-provider-groups-page/merchant-provider-group-view/merchant-provider-group-view.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="entity; else spinner" class="entity-view">
-  <div class="entity-view__title">{{'MERCHANTPROVIDERGROUP_TITLE' | translate}}</div>
+  <entity-view-breadcrumbs [items]="breadcrumbs"></entity-view-breadcrumbs>
 
   <div (click)="navigation.back()" class="entity-view__change-mode"><md-icon>reply</md-icon></div>
 
@@ -79,5 +79,5 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="1" [numberOfCards]="1" [title]="'MERCHANTPROVIDERGROUP_TITLE' | translate"></spe-loader>
+  <spe-loader [numberOfTabs]="1" [numberOfCards]="1" [title]="'MERCHANTPROVIDERGROUP_INDEX_TITLE' | translate"></spe-loader>
 </ng-template>
