--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
@@ -1,10 +1,6 @@
 <div *ngIf="entity; else spinner" class="entity-view">
 
-  <div class="entity-view__title">
-    <span [routerLink]="['/productschedules']" class="entity-view__title__breadcrumb">{{'PRODUCTSCHEDULE_INDEX_TITLE' | translate}}</span>
-    <md-icon class="breadcrumb-arrow">keyboard_arrow_right</md-icon>
-    {{entity.name}}
-  </div>
+  <entity-view-breadcrumbs [items]="breadcrumbs"></entity-view-breadcrumbs>
 
   <div (click)="navigation.back()" class="entity-view__change-mode"><md-icon>reply</md-icon></div>
 
@@ -54,7 +50,7 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="3" [title]="'PRODUCTSCHEDULE_INDEX_TITLE' | translate" [cardsExpression]="'300px'" [showBreadcrumb]="true"></spe-loader>
+  <spe-loader [numberOfTabs]="3" [title]="'PRODUCTSCHEDULE_INDEX_TITLE' | translate" [cardsExpression]="'300px'"></spe-loader>
 </ng-template>
 
 
