--- a/src/app/pages/rebills-page/rebill-view/rebill-view.component.html
+++ b/src/app/pages/rebills-page/rebill-view/rebill-view.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="entity; else spinner" class="entity-view">
-  <div class="entity-view__title">{{'REBILL_TITLE' | translate}}</div>
+  <entity-view-breadcrumbs [items]="breadcrumbs"></entity-view-breadcrumbs>
 
   <div (click)="navigation.back()" class="entity-view__change-mode"><md-icon>reply</md-icon></div>
 
@@ -100,5 +100,5 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="3" [cardsExpression]="'300px;480px'" [title]="'REBILL_TITLE' | translate"></spe-loader>
+  <spe-loader [numberOfTabs]="3" [cardsExpression]="'300px;480px'" [title]="'REBILL_INDEX_TITLE' | translate"></spe-loader>
 </ng-template>
