--- a/src/app/pages/shipping-receipts-page/shipping-receipts-view/shipping-receipt-view.component.html
+++ b/src/app/pages/shipping-receipts-page/shipping-receipts-view/shipping-receipt-view.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="entity; else spinner" class="entity-view">
-  <div class="entity-view__title">{{'SHIPPINGRECEIPT_TITLE' | translate}}</div>
+  <entity-view-breadcrumbs [items]="breadcrumbs"></entity-view-breadcrumbs>
 
   <div (click)="navigation.back()" class="entity-view__change-mode"><md-icon>reply</md-icon></div>
 
@@ -89,7 +89,7 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="1" [numberOfCards]="1" [title]="'SHIPPINGRECEIPT_TITLE' | translate"></spe-loader>
+  <spe-loader [numberOfTabs]="1" [numberOfCards]="1" [title]="'SHIPPINGRECEIPT_INDEX_TITLE' | translate"></spe-loader>
 </ng-template>
 
 
