--- a/src/app/pages/smtp-providers-page/smtp-provider-view/smtp-provider-view.component.html
+++ b/src/app/pages/smtp-providers-page/smtp-provider-view/smtp-provider-view.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="entity; else spinner" class="entity-view">
-  <div class="entity-view__title">{{'SMTP_TITLE' | translate}}</div>
+  <entity-view-breadcrumbs [items]="breadcrumbs"></entity-view-breadcrumbs>
 
   <div (click)="navigation.back()" class="entity-view__change-mode"><md-icon>reply</md-icon></div>
 
@@ -41,6 +41,6 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="3" [numberOfCards]="1" [title]="'SMTP_TITLE' | translate"></spe-loader>
+  <spe-loader [numberOfTabs]="3" [numberOfCards]="1" [title]="'SMTP_INDEX_TITLE' | translate"></spe-loader>
 </ng-template>
 
