--- a/src/app/shared/components/spe-loader/spe-loader.component.scss
+++ b/src/app/shared/components/spe-loader/spe-loader.component.scss
@@ -45,7 +45,13 @@
 .dummy-title-id {
   display: inline-block;
   vertical-align: middle;
-  height: 24px;
+  height: 20px;
   width: 180px;
   background: rgba(0,0,0,0.12);
+}
+
+.dummy-title-arrow {
+  height: 20px;
+  line-height: 20px;
+  vertical-align: middle;
 }
