--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -17,6 +17,8 @@ $blue-color: #4A90E2;
     }
 
     md-icon {
+      height: 20px;
+      line-height: 20px;
       vertical-align: middle;
     }
   }
@@ -68,12 +70,12 @@ $blue-color: #4A90E2;
 
   &__change-mode {
     position: absolute;
-    top: 44px;
-    left: 10px;
+    top: 45px;
+    left: 18px;
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16), 0 2px 5px 0 rgba(0, 0, 0, 0.26);
     background-color: $blue-color;
     color: white;
     z-index: 1;
