--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
@@ -50,7 +50,7 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="3" [title]="'PRODUCTSCHEDULE_INDEX_TITLE' | translate" [cardsExpression]="'300px'"></spe-loader>
+  <spe-loader [numberOfTabs]="3" [title]="'PRODUCTSCHEDULE_INDEX_TITLE' | translate" [cardsExpression]="'300px'" [blue]="true"></spe-loader>
 </ng-template>
 
 
