--- a/src/app/shared/components/spe-loader/spe-loader.component.html
+++ b/src/app/shared/components/spe-loader/spe-loader.component.html
@@ -1,60 +1,15 @@
 <div class="entity-view">
 
-  <div class="entity-view__title">
-    <div class="dummy-title">{{title}}
-      <ng-container *ngIf="showBreadcrumb">
-        <md-icon class="dummy-title-arrow">keyboard_arrow_right</md-icon>
-        <span class="dummy-title-id"></span>
-      </ng-container>
-    </div>
-  </div>
+  <spe-loader-breadcrumb [title]="title" [showBreadcrumb]="showBreadcrumb"></spe-loader-breadcrumb>
 
   <div (click)="navigation.back()" class="entity-view__change-mode"><md-icon>reply</md-icon></div>
 
   <div>
 
-    <div class="entity-view__info">
-      <div class="entity-view__info__image">
-        <div class="dummy-image"></div>
-      </div>
-      <div class="entity-view__info__data">
-        <div class="entity-view__info__data__date">
-          <div class="dummy-date"></div>
-        </div>
+    <spe-loader-blue-header *ngIf="blue; else common"></spe-loader-blue-header>
+    <ng-template #common><spe-loader-header></spe-loader-header></ng-template>
 
-        <div class="entity-view__info__data__name">
-          <div class="dummy-name"></div>
-        </div>
-      </div>
-    </div>
-
-    <div class="entity-view__navigation">
-      <span *ngFor="let t of tabs" class="entity-view__navigation__label">
-        <span class="dummy-tab-label"></span>
-      </span>
-    </div>
-
-    <md-tab-group>
-      <md-tab>
-
-        <div class="flex-custom" [class.flex-custom--wrap]="wrap">
-          <div *ngFor="let c of cards"
-               class="entity-view__card dummy-card"
-               [style.width]="c">
-            <div class="entity-view__card__header">
-              <div class="entity-view__card__header__title dummy-card-header">
-                <div class="dummy-card-title"></div>
-                <md-icon class="dummy-card-icon">more_vert</md-icon>
-              </div>
-            </div>
-
-            <div class="entity-view__card__content">
-              <table-loader [numberOfRows]="5" [rowHeight]="18" [rowMarginVertical]="22"></table-loader>
-            </div>
-          </div>
-        </div>
-      </md-tab>
-    </md-tab-group>
+    <spe-loader-body [cardsExpression]="cardsExpression" [numberOfCards]="numberOfCards" [numberOfTabs]="numberOfTabs" [wrap]="wrap"></spe-loader-body>
 
   </div>
 
