--- a/src/app/pages/components/table-advanced/table-advanced.component.scss
+++ b/src/app/pages/components/table-advanced/table-advanced.component.scss
@@ -101,3 +101,15 @@ tr {
   background-repeat: no-repeat;
   border-radius: 50%;
 }
+
+.header-float {
+  position: fixed;
+  width: 100%;
+  background: white;
+  z-index: 1;
+  top: 0;
+
+  th {
+    box-sizing: border-box;
+  }
+}
