--- a/src/assets/scss/_navigation.scss
+++ b/src/assets/scss/_navigation.scss
@@ -14,6 +14,7 @@ $sidebar-text-color-hover: #5AA3E8;
 md-sidenav {
   max-width: $sidenav-width-overflow;
   min-width: 0 !important;
+  z-index: 6 !important;
 
   @media #{$medium-and-down} {
     &.md-sidenav-opened {
@@ -82,6 +83,7 @@ md-sidenav {
 md-sidenav-layout > .md-sidenav-content {
   background-color: #E6EAF2 !important;
   height: 100vh;
+  transform: none !important;
 }
 
 md-sidenav-layout {
