--- a/src/app/pages/components/table-advanced/table-advanced-header/table-advanced-header.component.scss
+++ b/src/app/pages/components/table-advanced/table-advanced-header/table-advanced-header.component.scss
@@ -12,6 +12,10 @@ table-density {
   padding: 5px 20px 5px 30px;
 }
 
+.header--no-top {
+  padding: 20px 20px 20px 30px;
+}
+
 .add-button {
   position: absolute;
   top: -14px;
