--- a/src/app/shared/components/spe-loader-blue-header/spe-loader-blue-header.component.html
+++ b/src/app/shared/components/spe-loader-blue-header/spe-loader-blue-header.component.html
@@ -1,6 +1,6 @@
 <div class="entity-view__header">
 
-  <div class="entity-view__header__gallery">
+  <div *ngIf="images" class="entity-view__header__gallery">
     <div class="dummy-image"></div>
   </div>
 
