Work on roles component

--- a/src/app/pages/components/entities-table/entities-table.component.html
+++ b/src/app/pages/components/entities-table/entities-table.component.html
@@ -83,6 +83,7 @@
             [customText]="customOptionText"
             [showView]="showView"
             [showDelete]="showDelete"
+            [showCopy]="showCopy"
             (viewClicked)="viewClicked.emit(entity)"
             (copyClicked)="copyClicked.emit(entity)"
             (exportClicked)="exportClicked.emit(entity)"
