--- a/src/app/pages/roles-page/roles-index/roles.component.html
+++ b/src/app/pages/roles-page/roles-index/roles.component.html
@@ -3,37 +3,18 @@
     {{'ROLE_INDEX_TITLE' | translate}}
   </div>
 
-  <md-card class="entity-index__card">
-    <md-card-content class="entity-index__card__content">
+  <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
-      <entities-table
-        [data]="entities"
-        [columnParams]="columnParams"
-        [filterString]="filterValue"
-        [serverError]="serverError"
-        (selected)="viewEntity($event.id)"
+  <md-tab-group [(selectedIndex)]="selectedIndex">
+    <md-tab>
+      <roles-index-shared></roles-index-shared>
+    </md-tab>
 
-        [service]="service"
-        (viewClicked)="viewEntity($event.id)"
-        (copyClicked)="copyEntity($event.id)"
-        (exportClicked)="exportEntity($event.id)"
-        (editClicked)="editEntity($event.id)"
-        (deleteClicked)="deleteEntity($event.id)"
-        (deleteManyClicked)="deleteMany($event)"
-        (refreshData)="refreshData()"
+    <md-tab>
+      <roles-index-custom></roles-index-custom>
+    </md-tab>
 
-        [limit]="limit"
-        [paginationValues]="paginationValues"
-        [previousDisabled]="page <= 0"
-        [nextDisabled]="!hasMorePages()"
-        (previous)="previous()"
-        (next)="next()"
-        (updateLimit)="updateLimit($event)"
-        (filterChanged)="filterValue = $event"
-        (searchChanged)="setSearchString($event)"
-      >
-      </entities-table>
-    </md-card-content>
-  </md-card>
+  </md-tab-group>
+
 </div>
 
