--- a/src/assets/scss/_entity-index.scss
+++ b/src/assets/scss/_entity-index.scss
@@ -3,6 +3,10 @@ $title-color: #8D8888;
 .entity-index {
   position: relative;
 
+  md-tab-header {
+    display: none;
+  }
+
   &__title {
     display: flex;
     align-items: center;
