--- a/src/assets/scss/_entity-index.scss
+++ b/src/assets/scss/_entity-index.scss
@@ -186,8 +186,9 @@ $title-color: #8D8888;
     .density {
 
       &--s {
-        img {
-          width: 35px;
+        .image {
+          max-width: 35px;
+          max-height: 35px;
         }
 
         .cell-image {
