--- a/src/app/pages/components/table-advanced/table-advanced.component.scss
+++ b/src/app/pages/components/table-advanced/table-advanced.component.scss
@@ -95,3 +95,12 @@ tr {
     }
   }
 }
+
+.image {
+  width: 45px;
+  height: 45px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+}
