--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-gallery/product-schedule-gallery.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-gallery/product-schedule-gallery.component.html
@@ -1,7 +1,7 @@
 <div class="entity-view__header__gallery">
   <ng-container *ngFor="let schedule of schedules">
-    <div *ngIf="schedule.product && schedule.product.getDefaultImagePath()">
-      <img src="{{schedule.product.getDefaultImagePath()}}" alt="">
-    </div>
+    <ng-container *ngIf="schedule.product && schedule.product.getDefaultImagePath()">
+      <div class="image" [style.background-image]="'url(' + schedule.product.getDefaultImagePath() + ')'"></div>
+    </ng-container>
   </ng-container>
 </div>
