--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -57,11 +57,13 @@ $blue-color: #4A90E2;
         margin-right: 15px;
       }
 
-      img {
-        margin: auto;
+      .image {
+        width: 100px;
+        height: 100px;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
         border-radius: 50%;
-        max-height: 100px;
-        max-width: 100px;
         border: 4px solid #97BEE4;
       }
 
@@ -564,7 +566,7 @@ $blue-color: #4A90E2;
   .density {
 
     &--s {
-      img {
+      .image {
         max-width: 35px;
         max-height: 35px;
       }
