--- a/src/app/pages/roles-page/roles-index/roles-index-custom/roles-index-custom.component.html
+++ b/src/app/pages/roles-page/roles-index/roles-index-custom/roles-index-custom.component.html
@@ -1,3 +1,5 @@
+<button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="addSelected.emit(true)"><md-icon>add</md-icon></button>
+
 <md-card class="entity-index__card">
   <md-card-content class="entity-index__card__content">
 
@@ -9,7 +11,8 @@
       (selected)="viewEntity($event.id)"
 
       [service]="service"
-      [showCopy]="true"
+      [showCopy]="service.hasWritePermission()"
+      [dedicatedOptions]="true"
       (viewClicked)="viewEntity($event.id)"
       (copyClicked)="copyRole($event)"
       (deleteClicked)="deleteEntity($event.id)"
